# serpentone

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  exception_handler.py  input.py  main.py  play.py  pyproject.toml  synths.py  test_tuning.py  tui.py  tuning.py
.devcontainer/: devcontainer.json
supriya-stubs/ugens/: basic.pyi  beq.pyi  bufio.pyi  chaos.pyi  convolution.pyi  delay.pyi  demand.pyi  diskio.pyi  dynamics.pyi  envelopes.pyi  ffsinosc.pyi  filters.pyi  gendyn.pyi  granular.pyi  hilbert.pyi  info.pyi  inout.pyi  lines.pyi  mac.pyi  ml.pyi  noise.pyi  osc.pyi  panning.pyi  physical.pyi  pv.pyi  reverb.pyi  safety.pyi  triggers.pyi
